# pud

./: .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: hygiene.yml  release.yml
pud-macros/: Cargo.toml
pud-macros/src/: arguments.rs  field.rs  field_group.rs  lib.rs  settings.rs  utils.rs
src/: lib.rs
tests/: trybuild.rs
tests/ui/fail/: unnamed_struct.rs  unnamed_struct.stderr  visibility_self.rs  visibility_self.stderr  visibility_super.rs  visibility_super.stderr
tests/ui/pass/: all_generics_are_mapped.rs  basic.rs  flatten.rs  full.rs  group.rs  map.rs  rename.rs  unnamed_renamed_struct.rs  visibility_crate.rs  visibility_super.rs
