[package]
name = "pud"
version = "0.0.0"
edition = "2024"
authors = ["Victor LEFEBVRE"]
description = "Generate typed, composable, no-std-friendly modifications (“puds”) for Rust structs."
documentation = "https://docs.rs/pud"
homepage = "https://github.com/vic1707/pud"
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/vic1707/pud"
categories = ["data-structures", "rust-patterns"]
keywords = ["macros", "atomic-update"]
rust-version = "1.85.0"

[workspace]
resolver = "3"
members = ["pud-macros"]

[lints]
workspace = true

[dependencies]
pud-macros = { path = "./pud-macros" }

[dev-dependencies]
trybuild = { version = "1.0.114", default-features = false }

[workspace.lints.rust]
rust_2024_compatibility = "deny"
unsafe_code = "deny"

[workspace.lints.clippy]
# <https://doc.rust-lang.org/clippy/lints.html#deprecated>
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = "deny"
restriction = "deny"
cargo = "deny"
nursery = "deny"
