[package]
name = "pud-macros"
version = "0.0.1"
edition = "2024"
authors = ["Victor LEFEBVRE"]
description = "Generate typed, composable, no-std-friendly modifications (“puds”) for Rust structs."
documentation = "https://docs.rs/pud"
homepage = "https://github.com/vic1707/pud"
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/vic1707/pud"
categories = ["data-structures", "rust-patterns"]
keywords = ["macros", "atomic-update"]
rust-version = "1.85.0"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
convert_case = "0.10.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }
